Fix ProxyResolutionService annotation bug and reactivate tests.

Network traffic annotation in ProxyResolutionService was wrongly set in
cases where proxy info was fetched through completely synchronous
method, causing flaky test failures.
The bug is fixed and tests are re-enabled.

Bug: 822975
Bug: 826744
Bug: 823077
Change-Id: Ic63301ff053fc9160b1a96372af1ee289342396c
Reviewed-on: https://chromium-review.googlesource.com/997656
Reviewed-by: Eric Roman <eroman@chromium.org>
Commit-Queue: Ramin Halavati <rhalavati@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549130}
Former-commit-id: 4196b8354cd1bf4aed168dfc0f21074893059303